--- a/template.yaml
+++ b/template.yaml
@@ -62,7 +62,6 @@ Resources:
         BlockPublicPolicy: true
         IgnorePublicAcls: true
         RestrictPublicBuckets: true
-      AccessControl: LogDeliveryWrite
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
@@ -87,6 +86,18 @@ Resources:
             Condition:
               Bool:
                 aws:SecureTransport: false
+          - Effect: Allow
+            Principal:
+              Service: logging.s3.amazonaws.com
+            Action:
+              - s3:PutObject
+            Resource:
+              - !Sub "arn:aws:s3:::${LoggingBucket}/*"
+            Condition:
+              ArnLike:
+                aws:SourceArn: !Sub "arn:aws:s3:::${DataBucket}"
+              StringEquals:
+                aws:SourceAccount: !Ref AWS::AccountId
 
   ############
   # DynamoDB #
@@ -224,14 +235,12 @@ Resources:
       - RekognitionFacesManagementPolicy:
           CollectionId: "*"
       - StepFunctionsExecutionPolicy:
-          StateMachineName: !GetAtt FaceIdentificationWorkflowStateMachine.Name
-      - StepFunctionsExecutionPolicy:
           StateMachineName: !GetAtt FaceIdentificationWorkflowRekognitionStateMachine.Name
       Environment:
         Variables:
           COLLECTIONS_TABLE: !Ref CollectionsTable
           FACES_TABLE: !Ref FacesTable
-          STATE_MACHINE_ARN: !Ref FaceIdentificationWorkflowStateMachine
+          STATE_MACHINE_ARN: !Ref FaceIdentificationWorkflowRekognitionStateMachine
           LOG_LEVEL: INFO
       Events:
         S3ObjectCreatedEvent:
